--- a/src/app/modules/lista-membresias-pago-efec/lista-membresias-pago-efec.component.html
+++ b/src/app/modules/lista-membresias-pago-efec/lista-membresias-pago-efec.component.html
@@ -66,7 +66,7 @@
                      
                       <ng-container *ngIf="column === 'Membresia'">
                         <ng-container *ngIf="prod.accion !== 'Online'">
-                          {{ prod.Mmembresia }}
+                          {{ prod.Membresia }}
                         </ng-container>
                         <ng-container *ngIf="prod.accion === 'Online'">
                           &nbsp;
