--- a/src/app/components/reset-password/reset-password.component.html
+++ b/src/app/components/reset-password/reset-password.component.html
@@ -3,10 +3,9 @@
       <div class="content_grid_padre">
         <div class="content_grid_h1">
           <div class="title_page">
-            <h1>Punto de venta</h1>
+            <h1>Restablece tu contraseña</h1>
             <h4>Cambiar contraseña</h4>
           </div>
-          <!--cierra div title pagina-->
           <div class="form_data">
             <form [formGroup]="resetForm" (ngSubmit)="onSubmit()">
               <p>
@@ -70,8 +69,7 @@
                   *ngIf="
                     resetForm.get('confirmaPassword')?.hasError('minlength') &&
                     !resetForm.get('confirmaPassword')?.hasError('required')
-                  "
-                >
+                  ">
                   <strong class="txt_msg">**Minimo 8 carácteres...</strong>
                 </mat-error>
                 <mat-error
@@ -80,7 +78,6 @@
                 >
                 </mat-form-field>
               </p>
-  
               <button
                 type="submit"
                 class="btn_int"
@@ -95,15 +92,9 @@
           <div class="registrate">
             <small><a routerLink="../login">Iniciar sesion</a></small>
           </div>
-          <!--cierra div texto registrate-->
         </div>
-        <!--cierra div content grid hino1 -->
         <div class="content_grid_h2"></div>
-        <!--cierra div content grid hijo2 -->
       </div>
-      <!--cierra div content grid padre-->
     </div>
-    <!--cierra div content_margin-->
   </div>
-  <!--cierra div content_body-->
   
